--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,3 +1,4 @@
 @import "../frontend/home/components/testimonial/_style"
 @import "../frontend/home/components/LatestProjects/_style"
 @import "../frontend/home/components/blog/_style"
+@import "../components/common/CustomCard/_style"
