--- a/src/components/common/CustomCard/_style.sass
+++ b/src/components/common/CustomCard/_style.sass
@@ -20,7 +20,7 @@
          color: #eee
          transition: 0.3s ease
          &:hover
-          color: #45a2df
+          color: #dd3333
        .card__description
           margin: 15px 0
           font-size: 14px
@@ -41,3 +41,4 @@
             font-size: 18px
             text-transform: capitalize
             color: #eee
+
