--- a/src/frontend/home/components/testimonial/_style.sass
+++ b/src/frontend/home/components/testimonial/_style.sass
@@ -1,11 +1,4 @@
-*
-  margin: 0
-  padding: 0
-  box-sizing: border-box
-  list-style: none
-  text-decoration: none
-  outline: none
-  border: none
+
 
 .testimonils
   .testimonils__bg-image
@@ -37,7 +30,7 @@
         flex-direction: column
         gap: 10px  
         i
-          color: #d24e1a
+          color: #dd3333
           font-size: 40px 
         p
           font-size: 14px
@@ -48,4 +41,6 @@
           h4 
             color: #eee
           p 
-            color: #d24e1a
+            color: #dd3333
+            font-weight: 500
+
