--- a/src/frontend/home/components/LatestProjects/_style.sass
+++ b/src/frontend/home/components/LatestProjects/_style.sass
@@ -1,58 +1,48 @@
-*
-  margin: 0
-  padding: 0
-  box-sizing: border-box
-  list-style: none
-  text-decoration: none !important
-  outline: none
-  border: none
 
-.project
-  .project__content
-    display: flex
+.project 
+  .project__content 
+    display: flex 
     .project__left--content
-      max-width: 450px
-      padding: 30px
-      background-color: #ffffff
+      max-width: 450px 
+      padding: 30px 
+      // background-color: #ffffff 
 
       .project__left__sticky--section
         position: sticky
-        top: 10px
-        h3
-          font-size: 50px
-          font-weight: 300
-          line-height: 1
-          letter-spacing: 0
-          color: #14141c
-          position: relative
-          &::after
+        top: 10px 
+        h3 
+          font-size: 50px 
+          font-weight: 300 
+          line-height: 1 
+          letter-spacing: 0 
+          color: #14141c 
+          position: relative 
+          &::after 
             content: ""
-            position: absolute
-            bottom: -10px
-            left: 0
-            width: 100px
-            height: 3px
-            background-color: #d24e1a
+            position: absolute 
+            bottom: -10px 
+            left: 0 
+            width: 100px 
+            height: 3px 
+            background-color: #dd3333
         p
-          font-size: 14px
+          font-size: 14px 
           color: #666
-          margin: 25px 0
-          line-height: 22px
-        .button
-          margin-top: 1rem
-          .view-all-btn
-            padding: 0.7rem 1rem
-            text-transform: capitalize
-            background-color: #d24e1a
-            color: #ffffff
-            transition: 0.3s ease
-            font-size: 14px
-            font-weight: 500
-            &:hover
-              background-color: #45a2df
-    .project__right--content
-    color: #eee
-    background-color: #111724
-   
-
-          
+          margin: 25px 0 
+          line-height: 22px 
+        .button 
+          margin-top: 1rem 
+          .view-all-btn 
+            padding: 0.7rem 1rem 
+            text-transform: capitalize 
+            background-color: #dd3333
+            color: #ffffff 
+            transition: 0.3s ease 
+            font-size: 14px 
+            font-weight: 500 
+            &:hover 
+              background-color: #045cb4 
+    
+    .project__right--content 
+      color: #eee 
+      background-color: #111724
