--- a/src/frontend/home/components/blog/_style.sass
+++ b/src/frontend/home/components/blog/_style.sass
@@ -1,19 +1,9 @@
-*
-  margin: 0
-  padding: 0
-  box-sizing: border-box
-  list-style: none 
-  text-decoration: none !important
-  outline: none
-  border: none
-.wrapper
-  max-width: 1400px
-  padding: 0 30px
-  margin:  0 auto  
+
+ 
 .blog  
   background-color: #f8feff
   padding-top: 7rem 
-  .blog__image
+  .blog__bg--image
     width: 100%
     min-height: 500px
     background-image: cover
@@ -54,11 +44,12 @@
             .time
               width:70px
               padding: 2px 0
-              background-color:#d24e1a
+              background-color:#dd3333
               display: flex
               justify-content: center
               align-items: center
               flex-direction: column
+             
               
               h4
                 font-size: 24px
@@ -81,23 +72,27 @@
         .blog__title--section
           padding-top:1rem
           .title-header
-            margin-bottom: .5rem  
+            margin-bottom: .5rem
           .blog__title
             font-size: 24px
             line-height: 24px
             position: relative
-            color:  #041230
-            font-weight: 400
+            color: #1e293b
+            font-weight: 500
             transition: 0.3s ease
             &:hover
-              color: #1b8ed7
+              color: #dd3333
           .title-footer
             padding: 0.4rem 1rem
-            background-color: #14141c
+            background-color: #dd3333
             color: #fff
             font-size: 16px
             text-transform: capitalize
             margin: 1rem 0
+            transition: 0.3s ease
+            &:hover
+               background-color: #045cb4 
+              
               
 
 
