add button component

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -3,3 +3,4 @@
 @import "../frontend/home/components/LatestProjects/_style"
 @import "../frontend/home/components/blog/_style"
 @import "../components/common/CustomCard/_style"
+@import "../components/common/button/_style"
