--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,6 +1,9 @@
 @import "../styles/global/_global"
+@import "../frontend/layout/header/_style"
 @import "../frontend/home/components/testimonial/_style"
 @import "../frontend/home/components/LatestProjects/_style"
 @import "../frontend/home/components/blog/_style"
 @import "../components/common/CustomCard/_style"
 @import "../components/common/button/_style"
+@import "../frontend/layout/footer/_style"
+@import "../frontend/blog detail/_style"
