--- a/src/frontend/layout/header/_style.sass
+++ b/src/frontend/layout/header/_style.sass
@@ -11,6 +11,8 @@
       height: 100%
       object-fit: contain
   .header__menu
+    & ul
+      margin-bottom: 0
     .menu__list
       display: flex
       justify-content: center
