--- a/src/frontend/home/components/blog/_style.sass
+++ b/src/frontend/home/components/blog/_style.sass
@@ -6,7 +6,7 @@
   .blog__bg--image
     width: 100%
     min-height: 500px
-    background-image: cover
+    background-size: cover
     background-position: center
     background-repeat: no-repeat
     h3
