--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,6 +1,9 @@
 @import "../styles/global/_global"
 @import "../frontend/layout/header/_style"
+@import "../frontend/home/components/banner/_banner"
+@import "../frontend/home/components/about/_about"
 @import "../frontend/home/components/testimonial/_style"
+@import "../frontend/home/components/overview/_style"
 @import "../frontend/home/components/LatestProjects/_style"
 @import "../frontend/home/components/blog/_style"
 @import "../components/common/CustomCard/_style"
