--- a/src/components/common/CustomCard/_style.sass
+++ b/src/components/common/CustomCard/_style.sass
@@ -1,44 +1,45 @@
 .card
-       display: grid
-       grid-template-columns: 1fr 1fr
-       margin: 30px
-       border: none
-       img
-         width: 100%
-         height: 300px
-         object-fit: cover
-
-       .card__info 
-         background-color: #181e2b
-         padding: 0 30px
-         display: flex
-         justify-content: center
-         flex-direction: column
-       .card__title
-         font-size: 24px
-         font-weight: 700
-         color: #eee
-         transition: 0.3s ease
-         &:hover
-          color: #dd3333
-       .card__description
-          margin: 15px 0
-          font-size: 14px
-          line-height: 20px
-          color: #999
-          position: relative
-          &::after
-             content: ""
-             position: absolute
-             bottom: -30px
-             left: 0
-             width: 100%
-             height: 1px
-             background-color: #979797
-       .card__button
-           margin-top: 30px
-           a
-            font-size: 18px
-            text-transform: capitalize
-            color: #eee
+  display: grid
+  grid-template-columns: 1fr 1fr
+  border: none
+  margin: 0 0 30px
+  .card__image
+    width: 100%
+    height: 300px
+    object-fit: cover
+  .card__info
+    background-color: #181e2b
+    padding: 0 30px
+    display: flex
+    justify-content: center
+    flex-direction: column
+    .card__title
+      font-size: 24px
+      font-weight: 700
+      color: #eee
+      transition: 0.3s ease
+      &:hover
+        color: #dd3333
+    .card__summary
+      margin: 15px 0
+      font-size: 14px
+      line-height: 20px
+      color: #999
+      position: relative
+      &::after
+        content: ""
+        position: absolute
+        bottom: -30px
+        left: 0
+        width: 100%
+        height: 1px
+        background-color: #979797
+    .card__button
+      margin-top: 30px
+      a
+        font-size: 18px
+          text-transform: capitalize
+          color: #eee
+  &:last-child
+    margin-bottom: 0      
 
