--- a/src/frontend/layout/header/_style.sass
+++ b/src/frontend/layout/header/_style.sass
@@ -22,10 +22,16 @@
       .menu__item
         text-transform: uppercase
         font-size: 14px
+        transition: 0.3s ease
+        &::hover
+        a
+          color: #dd3333  
+
         &.menu__link--acitve
           color: #dd3333  
         a
           color:#14141c
+         
             
        
         
