--- a/src/components/common/CustomCard/_style.sass
+++ b/src/components/common/CustomCard/_style.sass
@@ -3,6 +3,10 @@
   grid-template-columns: 1fr 1fr
   border: none
   margin: 0 0 30px
+  @media ( max-width: 768px  )
+    grid-template-columns: 1fr
+
+    
   .card__image
     width: 100%
     height: 300px
@@ -13,6 +17,8 @@
     display: flex
     justify-content: center
     flex-direction: column
+    @media ( max-width: 768px  )
+      padding: 30px 
     .card__title
       font-size: 24px
       font-weight: 700
@@ -38,8 +44,8 @@
       margin-top: 30px
       a
         font-size: 18px
-          text-transform: capitalize
-          color: #eee
+        text-transform: capitalize
+        color: #eee
   &:last-child
     margin-bottom: 0      
 
