--- a/src/frontend/home/components/LatestProjects/_style.sass
+++ b/src/frontend/home/components/LatestProjects/_style.sass
@@ -1,7 +1,8 @@
 
 .project 
   .project__content 
-    display: flex 
+    width: 100%
+    // display: flex 
     .project__left--content
       max-width: 450px 
       padding: 30px 
