--- a/src/frontend/home/components/about/_about.sass
+++ b/src/frontend/home/components/about/_about.sass
@@ -7,7 +7,7 @@
       
      
   .about__content
-    position: relative
+    padding:  3rem 0
     h3
       font-size: 50px 
       font-weight: 300 
