--- a/src/frontend/home/components/banner/_banner.sass
+++ b/src/frontend/home/components/banner/_banner.sass
@@ -1,5 +1,70 @@
 .banner
   .banner__image
-    img
-      max-width: 100%
-      height: auto
+    width: 100%
+    height: 100vh
+    background-size: cover
+    background-position: center
+    background-repeat: no-repeat
+    position: relative
+    .banner__title--holder
+      position: absolute
+      top: 50%
+      right: 0
+      margin-top: -235px
+      width: 480px
+      height: 470px
+      background-color: hsla(0,0%,5%,.9)
+      padding: 40px
+      display: flex
+      justify-content: center
+      align-items: center
+      z-index: 10
+
+
+      .title__holder--content
+        .category
+          text-transform: uppercase
+          color: #fff
+        .banner__title
+          padding: 0
+          font-size: 36px
+          letter-spacing: 0
+          line-height: 1.2
+          font-weight: 400
+          margin: 0 0 34px
+          color: #fff
+          text-transform: capitalize
+        .banner__description
+          color: #aaa
+          font-size: 14px
+          padding: 0
+          margin: 0
+  .swiper-button-prev
+    left: auto
+    margin-left: 0
+    right: 440px
+    margin-top: 205px
+   
+    &::after
+      font-size: 16px
+      color: #fff
+      padding: 1.5rem 
+      background-color: #dd3333
+ 
+
+  .swiper-button-next
+    right: 378px
+    margin-top: 205px
+    &::after
+      font-size: 16px
+      color:#fff
+      padding: 1.5rem
+      background-color: #dd3333
+
+
+            
+    
+
+
+
+    
