--- a/src/frontend/home/components/blog/_style.sass
+++ b/src/frontend/home/components/blog/_style.sass
@@ -26,48 +26,39 @@
         height: 3px
         background-color: #d24e1a
     .blog__list
-      display: grid
-      grid-template-columns: 1fr 1fr 1fr
-      grid-gap: 30px
-      
-      .blog__item
-        margin: 4rem 0
-
-       
+      padding: 4rem 0
+      .blog__card
         .blog__img
-          .image
-            width: 100%
-            height: 250px
-            background-size: cover
-            background-position: center
-            background-repeat: no-repeat
-            .time
-              width:70px
-              padding: 2px 0
-              background-color:#dd3333
-              display: flex
-              justify-content: center
-              align-items: center
-              flex-direction: column
-             
-              
-              h4
-                font-size: 24px
-                color: #fff
-                font-weight: 300
-                position: relative
-                &::after
-                  content: ""
-                  position: absolute
-                  left: 0
-                  bottom:-4px
-                  width: 30px
-                  height: 1px
-                  background-color: #fbff01
-              h5
-                font-size: 14px 
-                color:#fff
-                line-height: 14px
+          width: 100%
+          height: 250px
+          background-size: cover
+          background-position: center
+          background-repeat: no-repeat
+          .time
+            width:70px
+            padding: 2px 0
+            background-color:#dd3333
+            display: flex
+            justify-content: center
+            align-items: center
+            flex-direction: column
+            h4
+              font-size: 24px
+              color: #fff
+              font-weight: 300
+              position: relative
+              &::after
+                content: ""
+                position: absolute
+                left: 0
+                bottom:-4px
+                width: 30px
+                height: 1px
+                background-color: #fbff01
+            h5
+              font-size: 14px 
+              color:#fff
+              line-height: 14px
 
         .blog__title--section
           padding-top:1rem
