--- a/src/frontend/layout/footer/_style.sass
+++ b/src/frontend/layout/footer/_style.sass
@@ -1,14 +1,10 @@
 .footer
   background-color: #111724
-
   .footer__list
-    display: flex
-    justify-content: space-between
-    align-items: center
     color: #eee
     padding: 5rem 0
-    .footer__logo
-      img
+    .footer__logo--section
+      .footer__logo
         padding-bottom: 1rem
     .footer__item
       font-size: 14px
