--- a/src/frontend/layout/header/_style.sass
+++ b/src/frontend/layout/header/_style.sass
@@ -1,37 +1,94 @@
-.header
-  display: flex
-  justify-content: space-between
-  align-items: center
-  padding: 0.8rem 0
-  .header__logo
-    max-width: 75px
-    height: 50px
-    img
-      width: 100%
-      height: 100%
-      object-fit: contain
-  .header__menu
-    & ul
-      margin-bottom: 0
-    .menu__list
+.header-section
+  position: absolute
+  background-color: rgba(0,0,0,.3)
+  border-bottom: none
+  width: 100%
+  z-index: 99
+  .toppanel
+    background-color: #16161b
+    padding: 5px 50px
+    .toppanel__left--panel
+      display: flex
+      justify-content: flex-start
+      align-items: center
+      gap: 1rem
+      & a
+        color:#eee
+      .toppanel__info
+        font-size: 13px
+        position: relative
+        &::after
+          position: absolute
+          content: ""
+          background-color: hsla(0,0%,100%,.4)
+          right: -10px
+          width: 1px
+          height: 20px
+      .toppanel__social--list
+        .social-icons
+          display: flex
+          gap: 1rem
+          margin-bottom: 0
+          padding-left: 0
+          .icon
+            transition: 0.3s ease
+            font-size: 13px
+            &:hover
+              a
+                color: #045cb4 
+          
+
+            
+  .header
+    display: flex
+    justify-content: space-between
+    align-items: center
+    padding: 1rem 0
+    .header__logo
+      max-width: 75px
+      height: 50px
+      img
+        width: 100%
+        height: 100%
+        object-fit: contain
+    .header__menu
+      & ul
+        margin-bottom: 0
+        padding-left: 0
+      .menu__list
+        display: flex
+        justify-content: center
+        align-items: center   
+        gap: 2rem
+      
+        .menu__item
+          text-transform: uppercase
+          font-size: 14px
+          transition: 0.3s ease
+          text-transform: uppercase
+          font-weight: 500
+          letter-spacing: 0.5px
+          &::hover
+          a
+            color: #dd3333  
+
+          &.menu__link--acitve
+            color: #dd3333  
+          a
+            color:#eee
+    .toll-free
+      background-color:#dd3333
+      padding: 0.6rem 1rem
+      color: #fff
+      font-size: 18px
+      letter-spacing: .5px
+      font-style: italic
       display: flex
       justify-content: center
-      align-items: center   
-      gap: 2rem
-    
-      .menu__item
-        text-transform: uppercase
-        font-size: 14px
-        transition: 0.3s ease
-        &::hover
-        a
-          color: #dd3333  
+      align-items: center
+      & p
+        margin-bottom: 0
 
-        &.menu__link--acitve
-          color: #dd3333  
-        a
-          color:#14141c
-         
             
        
         
