--- a/src/frontend/home/components/about/_about.sass
+++ b/src/frontend/home/components/about/_about.sass
@@ -3,27 +3,14 @@
   .about__image
     margin-top:-5rem
     z-index: 10
-    position: relative  
+    position: relative
+    max-width: 100%
+    height: auto 
       
      
   .about__content
     padding:  3rem 0
-    h3
-      font-size: 50px 
-      font-weight: 300 
-      line-height: 1 
-      letter-spacing: 0 
-      color: #14141c 
-      position: relative 
-      margin-bottom: 2rem
-      &::after
-        content: ""
-        position: absolute 
-        bottom: -10px 
-        left: 0 
-        width: 100px 
-        height: 3px 
-        background-color: #dd3333
+
     .about__text
       font-size: 14px
       color: #666
