--- a/src/frontend/home/components/banner/_banner.sass
+++ b/src/frontend/home/components/banner/_banner.sass
@@ -25,6 +25,15 @@
         .category
           text-transform: uppercase
           color: #fff
+          animation: category 1s
+          @keyframes category
+            0%
+              transform: translateY(-20px)
+              
+            100%
+              transform: translateY(0px)
+              
+
         .banner__title
           padding: 0
           font-size: 36px
@@ -60,7 +69,12 @@
       color:#fff
       padding: 1.5rem
       background-color: #dd3333
-
+  .swiper-slide-active
+    .category
+      color: #000
+      animation: category 1s !important
+      animation-delay: 0.3s !important
+      
 
             
     
