--- a/src/frontend/home/components/blog/_style.sass
+++ b/src/frontend/home/components/blog/_style.sass
@@ -1,32 +1,39 @@
 
  
 .blog  
-  background-color: #f8feff
-  padding-top: 7rem 
+ 
+ 
   .blog__bg--image
     width: 100%
     min-height: 500px
     background-size: cover
     background-position: center
     background-repeat: no-repeat
-    h3
-      font-size: 50px
-      font-weight: 300
-      line-height: 1
-      letter-spacing: 0
-      color: #14141c
-      position: relative
+    position: relative
+
+
+    &::before
+      content: ""
+      position: absolute
+      width: 100%
+      height: 100%
+      background-color: rgba(#f8feff, 0.9)
+    
+    
+
+    & .title
       width: 300px
-      &::after
-        content: ""
-        position: absolute
-        bottom: -10px
-        left: 0
-        width: 100px
-        height: 3px
-        background-color: #d24e1a
+      z-index: 1
+      position: relative
+      padding-top: 5rem
+
+   
     .blog__list
-      padding: 4rem 0
+      padding: 3rem 0
+      z-index: 1
+      position: relative
+    
+      
       .blog__card
         .blog__img
           width: 100%
@@ -34,6 +41,7 @@
           background-size: cover
           background-position: center
           background-repeat: no-repeat
+          
           .time
             width:70px
             padding: 2px 0
