--- a/src/frontend/home/components/LatestProjects/_style.sass
+++ b/src/frontend/home/components/LatestProjects/_style.sass
@@ -1,11 +1,11 @@
 
 .project 
   .project__content 
-    width: 100%
-    // display: flex 
+    // width: 100%
     .project__left--content
       max-width: 450px 
       padding: 30px 
+      
 
       .project__left__sticky--section
         position: sticky
