--- a/src/components/common/button/_style.sass
+++ b/src/components/common/button/_style.sass
@@ -1,4 +1,4 @@
-button
+.custom-button
   padding: 0.6rem 1rem
   background-color: #dd3333
   color: #fff
@@ -6,5 +6,6 @@ button
   text-transform: capitalize
   margin: 1rem 0
   transition: 0.3s ease
+  display: inline-block
   &:hover
     background-color: #045cb4 
