--- a/src/frontend/home/components/banner/_banner.sass
+++ b/src/frontend/home/components/banner/_banner.sass
@@ -1,6 +1,6 @@
 @keyframes categoryAnimation
    0%
-      transform: translateY(70px)
+      transform: translateY(40px)
               
    100%
      transform: translateY(0)
@@ -32,7 +32,6 @@
         .category
           text-transform: uppercase
           color: #fff
-          animation: category 1s
               
 
         .banner__title
@@ -80,10 +79,22 @@
             animation-duration: 1s
             animation-delay: 0.3s
             animation-name: categoryAnimation
-      
+        .banner__title
+            opacity: 1
+            animation-fill-mode: both
+            animation-iteration-count: 1
+            animation-duration: 1s
+            animation-delay: 0.4s
+            animation-name: categoryAnimation
+        .banner__description
+            opacity: 1
+            animation-fill-mode: both
+            animation-iteration-count: 1
+            animation-duration: 1s
+            animation-delay: 0.5s
+            animation-name: categoryAnimation
 
-            
-    
+ 
 
 
 
