--- a/src/frontend/home/components/blog/_style.sass
+++ b/src/frontend/home/components/blog/_style.sass
@@ -82,8 +82,12 @@
             &:hover
               color: #dd3333
          
+.swiper-wrapper
+  margin-bottom: 2rem       
               
-              
+.swiper-pagination-bullet
+  background-color:#dd3333 !important         
+      
 
 
 
