--- a/src/frontend/layout/header/_style.sass
+++ b/src/frontend/layout/header/_style.sass
@@ -7,11 +7,22 @@
   .toppanel
     background-color: #16161b
     padding: 5px 50px
+    display:  flex
+    justify-content: space-between
+    align-items: center
+    flex: wrap
+    @media screen and ( max-width:1130px  )
+      padding: 7px 50px
+    @media screen and ( max-width:490px  )
+      flex-direction: column  
     .toppanel__left--panel
       display: flex
       justify-content: flex-start
       align-items: center
       gap: 1rem
+      flex: wrap
+
+   
       & a
         color:#eee
       .toppanel__info
@@ -36,6 +47,15 @@
             &:hover
               a
                 color: #045cb4 
+    .toppanel__right--panel
+      display: none
+      @media screen and ( max-width: 1130px  )
+        display: block
+        font-size: 15px
+        .number
+          color: #eee 
+          margin-bottom: 0
+          font-style: italic             
           
 
             
@@ -50,70 +70,6 @@
         width: 100%
         height: 100%
         object-fit: contain
-    .header__menu
-      display: block
-      @media ( max-width:1130px )
-        display: none
-      & ul
-        margin-bottom: 0
-        padding-left: 0
-      .menu__list
-        display: flex
-        justify-content: center
-        align-items: center   
-        gap: 2rem
-      
-        .menu__item
-          text-transform: uppercase
-          font-size: 14px
-          transition: 0.3s ease
-          text-transform: uppercase
-          font-weight: 500
-          letter-spacing: 0.5px
-          display: flex
-          justify-content: center
-          align-items: center
-          padding: 1rem 0
-
-          &:hover
-            a
-              color: #dd3333 
-            .sub-menu
-              display: block
-           
-          i
-            color: #eee
-            font-size: 24px
-
-        
-          a
-            color:#eee
-          .sub-menu
-            position: absolute
-            margin: 0
-            width: 260px
-            background-color: #111
-            top: 100%
-            // left: -30px
-            padding: 20px 0
-            z-index: 55
-            transition: all .3s ease
-            display: none
-            &::after
-              content: ""
-              position: absolute
-              top: 100%
-              left: 0
-              border-right: 260px solid transparent
-              border-top: 20px solid #111
-            a
-              color: #eee  
-              
-            .sub-menu__item
-              font-size: 13px
-              text-transform: capitalize
-              padding: 0 30px
-              margin: 5px 0 10px   
     .toll-free
       background-color:#dd3333
       padding: 0.6rem 1rem
@@ -148,8 +104,28 @@
 button
   &:hover
     background-color: unset !important
+ 
+// .Offcanvas-header
+.btn-close
+  color: #ffffff !important  
+
 .offcanvas.offcanvas-start
-  // background-color: #16161b
+  background-color: #16161b
+.offcanvas-body
+  .header__menu
+    .menu__list
+      display: flex
+      flex-direction: column
+      gap: 0
+      .menu__item
+        position: relative
+        .sub-menu
+          position: absolute
+          min-height: 200px
+        
+
+
+
       
 
   
