--- a/src/frontend/home/components/about/_about.sass
+++ b/src/frontend/home/components/about/_about.sass
@@ -1,7 +1,7 @@
 .about
   .about__content
   .about__image
-    margin-top:-5rem
+    margin-top:-6rem
     z-index: 10
     position: relative
     max-width: 100%
@@ -9,7 +9,11 @@
       
      
   .about__content
-    padding:  3rem 0
+    padding:  2rem 0
+    display: flex
+    justify-content: center
+    align-items: start
+    flex-direction: column
 
     .about__text
       font-size: 14px
