--- a/src/frontend/layout/footer/_style.sass
+++ b/src/frontend/layout/footer/_style.sass
@@ -1,21 +1,93 @@
 .footer
   background-color: #111724
-  .footer__list
+  position: relative
+  z-index: 1
+  margin-top: 4rem
+  &::before
+    content: ""
+    position: absolute
+    width: 50%
+    top:-54px
+    left: 0
+    height:300px
+    clip-path: polygon(0 18%, 100% 0%, 100% 100%, 0% 100%)
+    background-color: #111724
+    z-index: -1
+
+  &::after
+    content: ""
+    position: absolute
+    width: 50%
+    top:-54px
+    right: 0
+    height:300px
+    clip-path: polygon(0 18%, 100% 0%, 100% 100%, 0% 100%)
+    background-color: #111724
+    z-index: -1 
+    
+
+  .footer__content
     color: #eee
     padding: 5rem 0
-    .footer__logo--section
+    & h4
+      font-size: 20px
+      position: relative 
+      margin-bottom: 2rem
+      display: inline-block
+      &::after
+        content: ""
+        position: absolute 
+        bottom: -15px 
+        left: 0 
+        width: 120px 
+        height: 1px
+        background-color: #b9b7b7
+      &::before
+        content: ""
+        position: absolute
+        bottom: -16px
+        width: 40px 
+        height: 3px
+        left: 40px
+        background-color: #d24e1a
+        z-index: 1
+    & ul
+      padding-left: 0
+    & a
+      color: #eee
+      font-size: 14px
+      text-transform: capitalize
+    & p
+      margin-bottom: 0
+      font-size: 14px  
+    & li
+      padding-bottom: 1rem
+    & .item
+      transition: 0.3 ease
+      &:hover
+        & a
+          color:#dd3333 !important   
+      
+    .footer__logo-section
       .footer__logo
         padding-bottom: 1rem
-    .footer__item
-      font-size: 14px
+        max-width: 75px
+        height: auto
+        p
+          font-size: 14px
 
-      .footer__menu
-        padding-left: 0
-        
-        .menu__item
-          text-transform: capitalize
-          a
-            color:#eee
+    .footer__contact
+      .contact-info
+        .info
+          display: flex
+          gap: 1rem
+          i
+            font-size: 18px
+            color: #dd3333
+           
+           
+
+    
            
 
         
