--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -10,3 +10,4 @@
 @import "../components/common/button/_style"
 @import "../frontend/layout/footer/_style"
 @import "../frontend/blog detail/_style"
+@import "../frontend/contact/_style"
