--- a/src/frontend/home/components/LatestProjects/_style.sass
+++ b/src/frontend/home/components/LatestProjects/_style.sass
@@ -1,15 +1,18 @@
 
 .project 
   .project__content 
-    // width: 100%
     .project__left--content
-      max-width: 450px 
-      padding: 30px 
+      padding: 30px
+      position: sticky
+      top: 20px 
+      height: 500px
+      margin-bottom: 30px
       
 
       .project__left__sticky--section
-        position: sticky
-        top: 10px 
+        
+        .title
+          width: 300px
      
         p
           font-size: 14px 
