--- a/src/frontend/layout/header/_style.sass
+++ b/src/frontend/layout/header/_style.sass
@@ -1,9 +1,15 @@
 .header-section
-  position: absolute
-  background-color: rgba(0,0,0,.3)
+  // position: absolute
+  // background-color: rgba(0,0,0,.8)
   border-bottom: none
   width: 100%
-  z-index: 99
+  z-index: 1000
+  position: sticky
+  top: 0
+  left: 0
+
+  
+
   .toppanel
     background-color: #16161b
     padding: 5px 50px
@@ -63,6 +69,17 @@
     display: flex
     justify-content: space-between
     align-items: center
+    position: absolute
+    top: 30px
+    left: 0
+    background-color: rgba(0,0,0,.8)
+    z-index: 1000
+    width: 100%
+    padding: 0 30px
+    margin:  0 auto
+
+
+
     .header__logo
       max-width: 75px
       height: 50px
@@ -89,7 +106,7 @@
         content:""
         left: -23px
         top: -2px
-        border-top: 49px solid transparent
+        border-top: 48px solid transparent
         border-right: 23px solid #dd3333
       & p
         margin-bottom: 0
