--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -4,10 +4,17 @@
 @import "../frontend/home/components/about/_about"
 @import "../frontend/home/components/testimonial/_style"
 @import "../frontend/home/components/overview/_style"
-@import "../frontend/home/components/LatestProjects/_style"
+@import "../frontend/home/components/LatestProduct/_style"
 @import "../frontend/home/components/blog/_style"
 @import "../components/common/CustomCard/_style"
 @import "../components/common/button/_style"
 @import "../frontend/layout/footer/_style"
 @import "../frontend/blog detail/_style"
 @import "../frontend/contact/_style"
+@import "../components/common/BlogCard/_style"
+@import "../frontend/about us/about tas/_style"
+@import "../frontend/about us/our associations/_style"
+@import "../frontend/about us/sister concern/_style"
+@import "../frontend/FAQs/_style"
+@import "../frontend/our services/_style"
+@import "../frontend/services details/_style"
