--- a/src/frontend/layout/footer/_style.sass
+++ b/src/frontend/layout/footer/_style.sass
@@ -1,4 +1,4 @@
-.footer
+footer
   background-color: #111724
   position: relative
   z-index: 1
@@ -67,14 +67,30 @@
       &:hover
         & a
           color:#dd3333 !important   
+
       
     .footer__logo-section
       .footer__logo
         padding-bottom: 1rem
         max-width: 75px
         height: auto
-        p
-          font-size: 14px
+      form
+        display: flex
+        margin-top: 4rem
+        input
+          width: 80%
+          padding: .6rem .5rem 
+          background-color: #191a1f
+          color: #eee
+          font-size: 14px 
+          border: 1px solid #b9b7b7
+        .send-btn
+          padding: 0.7rem 1rem 
+          background-color: #dd3333
+          border-top: 1px solid #b9b7b7
+          border-right: 1px solid #b9b7b7
+          border-bottom: 1px solid #b9b7b7
+
 
     .footer__contact
       .contact-info
@@ -105,5 +121,9 @@
       justify-content: space-between
       align-items: center
       padding: 1rem 0
-      .bottom-item
-        font-size: 13px 
+      font-size: 13px
+      & a
+        color: #eee
+        padding-left: 5px
+
+      
