--- a/src/frontend/about us/about tas/_style.sass
+++ b/src/frontend/about us/about tas/_style.sass
@@ -5,6 +5,8 @@
     .tas__content
         .tas__description
             color: #666
+            font-size: 14px
+            line-height: 24px
 
 
 .items
@@ -69,6 +71,11 @@
                 position: absolute
                 transition: all 0.2s linear
                 background: #dd3333
+            .items__description
+                color:#666
+                font-size: 14px
+                line-height: 24px
+
 
                    
 
@@ -102,8 +109,14 @@
 
 .testimonials
     background-color: #f8f8f8
-    padding: 3rem 0
-    margin-bottom: 6rem
+    padding: 4rem 0
+    margin: 6rem 0
+    background-size: cover
+    background-repeat: no-repeat
+    background-position: center
+    position: relative
+    width: 100%
+    height: 100%
     .testimonials__card
         position: relative
         &:hover
@@ -137,10 +150,10 @@
             box-shadow: 0px 5px 20px 0px rgba(0, 6, 91, 0.05)
             border: 1px solid #dce1e4
             .testimonials__text
-                font-size: 16px
+                font-size: 14px
                 color: #666
                 font-style: italic
-                line-height: 30px
+                line-height: 26px
                 font-weight: 500
         .testimonials__client
             padding: 1rem 2rem
@@ -171,6 +184,10 @@
                 object-fit: cover
             .testimonials__client--text
                 text-transform: capitalize
+                span
+                    font-size: 13px
+                .testimonials__client--name
+                    font-size: 19px    
                 
 
 
