--- a/src/frontend/about us/our associations/_style.sass
+++ b/src/frontend/about us/our associations/_style.sass
@@ -5,6 +5,8 @@
     flex-direction: column
     .associations__description
         text-align: center
+        color: #666
+        font-size: 14
 .distributors-section
     margin: 4rem 0
     padding: 3rem 0
@@ -12,10 +14,9 @@
     .distributors
         display: grid
         grid-template-columns: repeat(5, 1fr)
-        background-color: #e0e0e0
+        background-color: #f8f8f8
         grid-column-gap: 1px
         grid-row-gap: 1px
-        border: 1px solid #e0e0e0
         @media screen and ( max-width: 950px )
             grid-template-columns: repeat(3, 1fr)
 
@@ -27,15 +28,17 @@
             .distributors__image
                 max-width: 100%
                 height: auto
+                aspect-ratio: 3/2
+                object-fit: contain
 
 .other-associations-section
     padding-bottom: 4rem
     .associations
         display: grid
-        background-color: #e0e0e0
+        background-color: #f8f8f8
         grid-column-gap: 1px
         grid-row-gap: 1px
-        border: 1px solid #e0e0e0
+        border: 1px solid #f8f8f8
         grid-template-columns: repeat(5, 1fr)
         @media screen and ( max-width: 950px )
             grid-template-columns: repeat(3, 1fr)
@@ -45,6 +48,7 @@
             .associations__image
                 max-width: 100%
                 height: 200px
+                oaspect-ratio: 3/2
                 object-fit: contain
                 
 
