--- a/src/frontend/blog detail/_style.sass
+++ b/src/frontend/blog detail/_style.sass
@@ -21,47 +21,7 @@
       width: 70px
       background-color: #eee
 
-    .breadcrumbs
-      ul
-        margin-bottom: 0
-        padding-left: 0
-      .breadcrumbs__list
-        display: flex
-        font-size: 14px
-        a
-          color: #666
-        .breadcrumbs__item
-          font-weight: 600
-          transition: 0.3s ease
-          &:hover
-            a
-              color: #dd3333
-        .separator
-          span
-            width: 33px
-            height: 24px
-            display: block
-            position: relative
-            &::before
-              width: 9px
-              height: 2px
-              display: block
-              content: ""
-              position: absolute
-              background-color: #ddd
-              left: 13px
-              top: 14px
-              transform: rotate(135deg)
-            &::after
-              width: 9px
-              height: 2px
-              display: block
-              content: ""
-              position: absolute
-              background-color: #ddd
-              left: 13px
-              top: 8px
-              transform: rotate(45deg)
+   
 
 .leftside
   .leftside__img
@@ -70,13 +30,15 @@
     padding-bottom: 1rem
   .leftside__description--holder
     h5
-      font-size: 20px
+      font-size: 18px
+      line-height: 24px
     & p
       padding: 0
       line-height: 1.7
       letter-spacing: 0
       margin: 0 0 20px
-      color: #777
+      color: #666
+      font-size: 14px
     ul
       margin: 30px
       li
@@ -92,7 +54,7 @@
       background-color: #e9eff4
       line-height: 1.7
       color: #777
-      font-size: 20px
+      font-size: 18px
       font-family: Lora
       font-weight: 400
       border-radius: 5px
