--- a/src/frontend/home/components/overview/_style.sass
+++ b/src/frontend/home/components/overview/_style.sass
@@ -1,7 +1,7 @@
 .overview
   .overview__bg--image
     width: 100%
-    height: 70vh
+    height: 60vh
     background-position: center
     background-size: cover
     background-repeat: no-repeat
@@ -9,6 +9,7 @@
     display: flex
     justify-content: start
     align-items: center
+    padding: 2rem 0
     &::before
       content: ""
       position: absolute
