--- a/src/frontend/our services/_style.sass
+++ b/src/frontend/our services/_style.sass
@@ -34,8 +34,13 @@
                         color:#dd3333
         .services__content
             padding: 1rem 0
-            h4
+            .services__title
                 text-transform: capitalize
+                font-size: 24px
+            .services__samary
+                font-size: 14px
+                color: #666
+                line-height: 22px   
             a
                 color: #000
                 transition: 0.3s ease
