--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -18,3 +18,4 @@
 @import "../frontend/FAQs/_style"
 @import "../frontend/our services/_style"
 @import "../frontend/services details/_style"
+@import "../components/common/CustomBreadcrumb/_style"
