--- a/src/frontend/about us/sister concern/_style.sass
+++ b/src/frontend/about us/sister concern/_style.sass
@@ -6,6 +6,13 @@
         & ul
             li
                 list-style-type: square
+                font-size: 14px
+                color: #666
+                line-height: 30px
+        & .block__description
+            font-size: 14px
+            color: #666
+            line-height: 24px     
 
         .block__left
             display: flex
