--- a/src/frontend/services details/_style.sass
+++ b/src/frontend/services details/_style.sass
@@ -8,7 +8,8 @@
         letter-spacing: 0
         margin: 0 0 20px
         color: #777 
-        font-size: 16px   
+        font-size: 14px 
+        line-height: 24px  
     .left
         .left__menu
             .left__item
@@ -61,5 +62,6 @@
                         position: absolute
                         left: 0
                         top: 50%
+                        color:#fff
                         transform: translateY(-50%)
 
