--- a/src/frontend/contact/_style.sass
+++ b/src/frontend/contact/_style.sass
@@ -20,12 +20,14 @@
           background-color: #191a1f
           color: #eee
           font-size: 14px
+          border: 1px solid #b9b7b7
         textarea
           width: 100%
           padding: 1rem .5rem
           background-color: #191a1f
           color: #eee
           font-size: 14px
+          border: 1px solid #b9b7b7
       button
         padding: .5rem 1rem 
         background-color:#dd3333 !important
