--- a/src/frontend/solutions details/_style.sass
+++ b/src/frontend/solutions details/_style.sass
@@ -1,4 +1,4 @@
-.service-detail
+.solutions-detail
     & ul
         padding-left: 0
         margin-bottom: 0
@@ -46,22 +46,42 @@
                         padding-right: 5px
 
         .right__details
-            ul
-                margin-bottom: 25px
-                li
-                    position: relative
-                    padding-left: 75px
-                    font-weight: 600
-                    margin-top: 45px
-                    i
-                        background-color: #dd3333
-                        width: 45px
-                        height: 45px
-                        line-height: 45px
-                        text-align: center
-                        position: absolute
-                        left: 0
-                        top: 50%
-                        color:#fff
-                        transform: translateY(-50%)
+           
 
+  
+      
+            
+       
+        
+        
+        
+        
+    .accordion-button::after 
+        width: 0
+        
+        
+    .accordion-header i
+                background-color: #dd3333
+                width: 45px
+                height: 45px
+                line-height: 45px
+                text-align: center
+                position: absolute
+                left: 0
+                top: 50%
+                color:#fff
+                transform: translateY(-50%)
+    .accordion-header span
+        padding-left: 3rem
+  
+
+            
+    .accordion-item
+        padding-bottom: 1rem
+        
+    .accordion-body li
+        list-style-type: disc
+        font-size: 14px
+        
+    .accordion-body
+        padding-left: 4rem
