--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -17,5 +17,6 @@
 @import "../frontend/about us/sister concern/_style"
 @import "../frontend/FAQs/_style"
 @import "../frontend/our services/_style"
-@import "../frontend/services details/_style"
+@import "../frontend/solutions details/_style"
 @import "../components/common/CustomBreadcrumb/_style"
+@import "../frontend/solutions/_style"
